traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:4: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
                                                     return{true}}
                                                            ^Snake:4: warning: enclosing method murNord has result type Unit: return value discarded
                                                     return{true}}
                                                     ^Snake:6: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
                                    return false}
                                           ^Snake:6: warning: enclosing method murNord has result type Unit: return value discarded
                                    return false}
                                    ^Snake:9: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
                                                       return true}
                                                              ^Snake:9: warning: enclosing method murNord has result type Unit: return value discarded
                                                       return true}
                                                       ^Snake:11: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
                                      return false}
                                             ^Snake:11: warning: enclosing method murNord has result type Unit: return value discarded
                                      return false}
                                      ^Snake:12: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false
         ^Snake:12: warning: enclosing method murNord has result type Unit: return value discarded
  return false
  ^Snake:16: error: type mismatch;
 found   : Unit
 required: Boolean
  if(estFaceMur() && murNord()){return true}
                            ^Snake:16: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  if(estFaceMur() && murNord()){return true}
                                       ^Snake:16: warning: enclosing method estPosiFin has result type Unit: return value discarded
  if(estFaceMur() && murNord()){return true}
                                ^Snake:17: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false}
         ^Snake:17: warning: enclosing method estPosiFin has result type Unit: return value discarded
  return false}
  ^Snake:26: error: value unary_! is not a member of Unit
    }while(!estPosiFin())
           ^